--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
  	<meta charset="UTF-8" />
  	<meta name="viewport" content="width=device-width, initial-scale=1">
- 	<title>Title</title>
+ 	<title>SlamApp</title>
  	<link rel="stylesheet" href="css/jquery.mobile-1.3.1.min.css" type="text/css">
  	<script type="text/javascript" src="js/jquery.js"></script>
  	<script type="text/javascript" src="js/app.js"></script>
@@ -15,7 +15,7 @@
  	<div data-role="page" id="login">
  		<div data-role="content">
  			<br><br><div data-role="collapsible" data-theme="b" data-content-theme="d" data-collapsed="false">
-			    <h4>Boilerplate Login Panel</h4>
+			    <h4>Slam App Login</h4>
 			    <div data-role="fieldcontain">
 			    <label for="textinput-fc">Username:</label>
 			    <input type="text" name="textinput-fc" id="textinput-fc" placeholder="Email Address / Username" value="">
@@ -34,7 +34,7 @@
  			<h1>Header Text</h1>
  		</div>
  		<div data-role="content">
- 			<h3>This is the Homepage of the App</h3>
+ 			<h3>Let's Slam</h3>
  		</div>
  		<div data-role="footer" data-position="fixed">
  			<h1>&copy; Footer Text</h1>
