--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 			    <h4>Slam App Login</h4>
 			    <div data-role="fieldcontain">
 			    <label for="textinput-fc">Username:</label>
-			    <input type="text" name="textinput-fc" id="textinput-fc" placeholder="Email Address / Username" value="">
+			    <input type="text" name="textinput-fc" id="textinput-fc" placeholder="Email Address" value="">
 			</div>
 			<div data-role="fieldcontain">
 			    <label for="textinput-fc">Password:</label>
 			    <input type="text" name="textinput-fc" id="textinput-fc" placeholder="Password" value="">
 			</div>
- 			<a href="#home" data-role="button" data-transition="none">Click to Login</a>
+ 			<a href="#home" data-role="button" id="login-buton" data-transition="none">Click to Login</a>
 			</div>
  		</div>
  	</div>
